use extracted dimens and other android views

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Androidkotlinbase">
         <activity
+            android:name=".AboutActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".NavigationDrawer"
             android:label="@string/title_activity_navigation_drawer"
-            android:theme="@style/Theme.Androidkotlinbase.NoActionBar"></activity>
+            android:theme="@style/Theme.Androidkotlinbase.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
